syntax = "proto3";

package auth;

service AuthService {
    rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message ValidateRequest {
    string raw_id_token = 1;
    repeated string claim_names = 2;
}

message ValidateResponse {
    string email = 1;
    repeated string groups = 2;
}

